Further changes to stylesheet. Implemented transcription and meaning text with animation. Improvements to design on mobile screens.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Zikrullah</title>
   </head>
-  <body>
+  <body onclick="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
